tests/fixtures/invalid/pow_bytes_set_set.py
# Cannot call pow() with Bytes, Set[int], Set[int]
x = pow(b"hello", {1, 2, 3}, {1, 2, 3})
